Fix a little design problem with skill images on small screen

--- a/ressources/style.css
+++ b/ressources/style.css
@@ -400,13 +400,6 @@ nav a:active {
     }
 }
 
-@media only screen and (max-width: 720px) {
-    .images {
-        padding: 50px 52px;
-        width: 140px;
-    }
-}
-
 @media only screen and (max-width: 700px) {
     header h2 a {
         font-size: 1.8rem;
